--- a/css/Login.css
+++ b/css/Login.css
@@ -7,7 +7,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    background: url('/Pics/sakura.jpg') no-repeat center center/cover;
+    background: url('Pics/sakura.jpg') no-repeat center center/cover;
     height: 100vh;
     display: flex;
     justify-content: center;
