--- a/css/style3.css
+++ b/css/style3.css
@@ -12,7 +12,7 @@ body {
     line-height: 1.6;
     color: #333;
     background-color: #f4f4f4;
-    background-image: url('/Sub/Media3/IMG_20241002_085809.jpg');
+    background-image: url('IMG_20241002_085809.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
