--- a/css/style2.css
+++ b/css/style2.css
@@ -12,7 +12,7 @@ body {
     line-height: 1.6;
     color: #333;
     background-color: #f4f4f4;
-    background-image: url('/Sub/Media2/GameGroupID_967.jpg');
+    background-image: url('GameGroupID_967.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
